sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value nbValeurs
  var lgr = nbValeurs()
            ^