sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var test=0
  var lgr = nbValeurs()
  var ecart = lgr
  while ((ecart>1)||(test==0)){
    test=1
  	if (ecart>1){
    	ecart = ecart/1.3
  	}
  	var i = 0
  	while ((i+ecart)<lgr){
    	if (!plusPetit(i,i+ecart)){
      	echange(i,i+ecart)
      	i+=1
        test=0
    	}
  	}
  }
}